# examples

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
common-data/: movies.json
django-dataloader/: pyproject.toml  setup.cfg
django-dataloader/api/: extensions.py  schema.py  urls.py  views.py
django-dataloader/api/definitions/: director.py  movie.py
django-dataloader/main/: settings.py  urls.py
django-dataloader/movies/: models.py
django-dataloader/movies/migrations/: 0001_initial.py  0002_auto_20210914_1250.py
django-subscriptions/: Makefile  pyproject.toml
django-subscriptions-rxdb/: Makefile  README.md  pyproject.toml
django-subscriptions-rxdb/src/api/: apps.py  asgi.py  context.py  models.py  schema.py  urls.py  views.py
django-subscriptions-rxdb/src/api/migrations/: 0001_initial.py  0002_auto_20210303_0254.py
django-subscriptions-rxdb/src/demo/: asgi.py  settings.py  urls.py
django-subscriptions/api/: asgi.py  context.py  schema.py  urls.py  views.py
django-subscriptions/demo/: asgi.py  settings.py  urls.py
fastapi/: README.md  pyproject.toml
fastapi-sqlalchemy/: .dockerignore  Dockerfile  README.md  alembic.ini  from-instance.js  pyproject.toml  queryset.js  setup.cfg
fastapi-sqlalchemy/alembic/: env.py
fastapi-sqlalchemy/alembic/versions/: 2b3c8830abf6_add_auth_model.py  3320c3c008d2_add_data.py  3a98bc1018d1_add_nullable_false.py  6c5045cd6a7a_add_auth_models.py  705aa75ea67b_add_person_model.py  9bc8667ab6a6_add_initial_models.py  bea5e58f3328_add_data.py  d117aba82184_add_initial_models.py  de9b93822f7c_add_data.py  e690282050a1_add_initial_models.py
fastapi-sqlalchemy/api/: mutation.py  schema.py
fastapi-sqlalchemy/api/definitions/: director.py  movie.py  people.py  user.py
fastapi-sqlalchemy/api/mutations/: login_user.py  register_user.py
fastapi-sqlalchemy/main/: __init__.py  auth.py  database.py  middleware.py  models.py
fastapi-sqlalchemy/scripts/: run-benchmarks  start-server
fastapi/api/: schema.py
fastapi/api/definitions/: movie.py
fastapi/main/: __init__.py
fastapi/templates/: index.html
reddit-clone/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
reddit-clone/alembic/: env.py
reddit-clone/migrations/: env.py
reddit-clone/migrations/versions/: 6128e6679253_initial.py  6fd9b8fa9cd7_initial.py  fcae25f2abf6_initial.py
reddit-clone/nginx/: nginx.conf
reddit-clone/reddit/: __init__.py  celery.py  database.py  emails.py  schema.py  settings.py  storage.py  tasks.py
reddit-clone/reddit/base/: queries.py  services.py  types.py
reddit-clone/reddit/comments/: loaders.py  models.py  services.py  types.py
reddit-clone/reddit/comments/mutations/: __init__.py  comment_create.py  comment_delete.py  comment_update.py  comment_vote.py
reddit-clone/reddit/core/: config.py  models.py
reddit-clone/reddit/db/: base.py  session.py
reddit-clone/reddit/models/: base.py  comment.py  post.py  subreddit.py  user.py
reddit-clone/reddit/posts/: loaders.py  models.py  services.py  types.py
reddit-clone/reddit/posts/mutations/: __init__.py  post_create.py  post_delete.py  post_update.py  post_vote.py
reddit-clone/reddit/subreddits/: loaders.py  models.py  queries.py  services.py  types.py
reddit-clone/reddit/subreddits/mutations/: __init__.py  subreddit_create.py  subreddit_delete.py  subreddit_join.py  subreddit_leave.py  subreddit_update.py
reddit-clone/reddit/templates/emails/: activate_email.html  base_email.html  change_email.html  password_reset.html
reddit-clone/reddit/threads/: models.py
reddit-clone/reddit/users/: loaders.py  models.py  mutations.py  queries.py  serializers.py  services.py  types.py
reddit-clone/reddit/users/mutations/: __init__.py  authenticate.py  avatar_remove.py  email_change.py  email_change_request.py  password_reset.py  password_reset_request.py  user_block.py  user_create.py  user_deactivate.py  user_update.py
reddit-clone/reddit/utils/: emails.py  storage.py  templates.py
startlette-subscriptions/: pyproject.toml  setup.cfg
startlette-subscriptions/api/: mutation.py  schema.py  subscription.py
startlette-subscriptions/api/defintions/: job.py
startlette-subscriptions/api/mutations/: create_job.py  update_job_status.py
startlette-subscriptions/api/subscriptions/: get_job_status.py  latest_crypto_price.py
startlette-subscriptions/jobs/: __init__.py  controller.py  subscription_hub.py
startlette-subscriptions/main/: __init__.py
