[tool.poetry]
name = "reddit-graphql"
version = "0.1.0"
description = "A reddit API clone built with GraphQL."
authors = ["Aryan Iyappan <aryaniyappan2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
alembic = "^1.7.1"
asyncpg = "^0.24"
strawberry-graphql = {extras = ["asgi"], version = "^0.77.0"}
fastapi = "^0.68.1"
starlette = "^0.14"
graphql-relay = "^3.1.0"
aiosmtplib = "^1.1.6"


[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.4.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
